--- a/call.html
+++ b/call.html
@@ -33,6 +33,29 @@
                 });
             });
         </script>
+
+
+
+<!-- Global site tag (gtag.js) - Google Ads: 458081885 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-458081885"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-458081885');
+</script>
+
+<!-- Event snippet for Wyświetlenie strony conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-458081885/_jzWCMmzkO4BEN2Mt9oB'});
+</script>
+
+
+
+
+
+
     </head>
     
     <body class="man" style="background-color: #f1f4f6;">
